<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="15dp">

    <ImageView
        android:id="@+id/roasterImage"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/roaster" />

    <TextView
        android:id="@+id/introText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/roasterImage"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="15dp"
        android:text="@string/about_business" />

    <TextView
        android:id="@+id/awardText"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/introText"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="15dp"
        android:text="@string/award_info" />

    <ImageView
        android:id="@+id/awardImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/introText"
        android:layout_toRightOf="@id/awardText"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="15dp"
        app:srcCompat="@drawable/award1" />

    <ImageView
        android:id="@+id/infoImage"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/awardImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/info" />

    <TextView
        android:id="@+id/infoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/infoImage"
        android:layout_marginVertical="5dp"
        android:text="@string/info"
        android:textSize="22sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/hoursText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/infoText"
        android:text="@string/hours"
        android:textSize="32sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/hoursDetailedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hoursText"
        android:text="@string/hours_details"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/addressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hoursDetailedText"
        android:text="@string/address"
        android:textSize="32sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/addressDetailedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addressText"
        android:autoLink="map"
        android:text="@string/address_details"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/phoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addressDetailedText"
        android:text="@string/phone"
        android:textSize="32sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/phoneDetailedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="phone"
        android:layout_below="@id/phoneText"
        android:text="@string/phone_details"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneDetailedText"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:textSize="32sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/emailDetailedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailText"
        android:autoLink="email"
        android:text="@string/email_details"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</ScrollView>


